add the useGuards in the user controller as a middleware but it return an error when I add the token

--- a/.env
+++ b/.env
@@ -5,3 +5,7 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://postgres:mahmoud123@localhost:5432/assessment?schema=public"
+
+JWT_SECRET="hsbWiAYMS0/B6oq6Z9so+vfG+lK+P97Q7n0iDk9VMa8=2"
+
+JWT_EXPIRES_IN="1h"
